--- a/Dockerfile.linux
+++ b/Dockerfile.linux
@@ -37,7 +37,7 @@ RUN conda create -y -n py310 python=3.10
 RUN conda create -y -n py311 python=3.11
 RUN conda init bash
 
-RUN yum update && yum install -y epel-release cmake3 && \
+RUN yum update -y && yum install -y epel-release cmake3 && \
     yum remove -y cmake && \
     ln -s /usr/bin/cmake3 /usr/bin/cmake && \
     cmake --version && \
