--- a/Dockerfile.u20gui
+++ b/Dockerfile.u20gui
@@ -1,13 +1,18 @@
 FROM dorowu/ubuntu-desktop-lxde-vnc
 # https://github.com/fcwu/docker-ubuntu-vnc-desktop
 
-RUN apt-get update -y && apt install locales -y && locale-gen "en_US.UTF-8" && rm -rf /var/cache/apt
-ENV LANG=en_US.UTF-8 LC_ALL=en_US.UTF-8 TZ=Asia/Shanghai PYTHONIOENCODING=UTF-8 PYTHONUNBUFFERED=1 EDITOR=vim
-RUN ln -s -f /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
+ENV LANG=en_US.UTF-8 LC_ALL=en_US.UTF-8 TZ=Asia/Shanghai DEBIAN_FRONTEND=noninteractive PYTHONIOENCODING=UTF-8 PYTHONUNBUFFERED=1 EDITOR=vim
+RUN rm -rf /etc/apt/sources.list.d/google-chrome.list # RUN apt-key del 4EB27DB2A3B88B8B
+RUN apt-get update -y && apt install locales -y && locale-gen "en_US.UTF-8" && rm -rf /var/cache/apt && ln -s -f /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
 
-RUN echo -e "Acquire::AllowInsecureRepositories \"true\";\nAcquire::AllowDowngradeToInsecureRepositories \"true\";" | sudo tee /etc/apt/apt.conf.d/99allow-unsigned && \
-    apt-get update -y && apt install -y \
+RUN apt-get update -y && apt install -y \
+    build-essential \
+    cmake \
+    cmake-curses-gui \
     curl \
+    g++ \
+    gdb \
+    git \
     graphviz \
     htop \
     libcurl4-openssl-dev \
